<resources>
    <string name="app_name" translatable="false">BusTO</string>
    <string name="app_name_full" translatable="false">Libre BusTO</string>
    <string name="app_name_debug" translatable="false">BusTO dev</string>
    <string name="app_description">You\'re using the latest in technology when it comes to respecting your privacy.
    </string>
    <string name="search">Search</string>
    <string name="qrcode">Scan QR Code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_barcode_scanner_install">Install Barcode Scanner?</string>
    <string name="message_install_barcode_scanner">This application requires an app to scan the QR codes. Would you like to install Barcode Scanner now?</string>
    <string name="insert_bus_stop_number">Bus stop number</string>
    <string name="insert_bus_stop_name">Bus stop name</string>
    <string name="insert_bus_stop_number_error">Insert bus stop number</string>
    <string name="insert_bus_stop_name_error">Insert bus stop name</string>
    <string name="route_towards_destination">%1$s towards %2$s</string>
    <string name="route_towards_unknown">%s (unknown destination)</string>
    <string name="network_error">Verify your Internet connection!</string>
    <string name="no_bus_stop_have_this_name">Seems that no bus stop have this name</string>
    <string name="no_arrivals_stop">No arrivals found for this stop</string>
    <string name="parsing_error">Error parsing the 5T/GTT website (damn site!)</string>
    <string name="query_too_short">Name too short, type more characters and retry
    </string>
    <string name="passages">Arrivals at: %1$s</string>
    <string name="results">Choose the bus stop…</string>
    <string name="line">Line</string>
    <string name="lines">Lines</string>
    <string name="lines_fill">Lines: %1$s</string>
    <string name="line_fill">Line: %1$s</string>
    <string name="no_passages">No timetable found</string>
    <string name="no_qrcode">No QR code found, try using another app to scan</string>
    <string name="internal_error">Unexpected internal error, cannot extract data from GTT/5T website</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_about_more">More about</string>
    <string name="action_wiki">Contribute</string>
    <string name="hack_url">https://gitpull.it/w/librebusto/en/</string>
    <string name="action_source">Source code</string>
    <string name="action_licence">Licence</string>
    <string name="action_author">Meet the author</string>
    <string name="added_in_favorites">Bus stop is now in your favorites</string>
    <string name="removed_from_favorites">Bus stop removed from your favorites</string>
    <string name="action_favorites">Favorites</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_map">Map</string>
    <string name="tip_add_favorite">No favorites? Arghh! Press on a bus stop star to populate this list!</string>
    <string name="action_remove_from_favourites">Delete</string>
    <string name="action_rename_bus_stop_username">Rename</string>
    <string name="dialog_rename_bus_stop_username_title">Rename the bus stop</string>
    <string name="dialog_rename_bus_stop_username_reset_button">Reset</string>
    <string name="about">About</string>
    <string name="howDoesItWork">
        <b>Tap the star</b>
        to add the bus stop to the favourites\n\n<b>How to read timelines:</b>\n<b>&#160;&#160;&#160;12:56*</b> Real-time
        arrivals\n<b>&#160;&#160;&#160;12:56</b> &#160; Scheduled arrivals\n\n<b>Pull down to refresh</b> the timetable
        \n <b>Long press on Arrivals source</b> to change the source of the arrival times
    </string>
    <string name="hint_button">GOT IT!</string>
    <string name="arrival_times">Arrival times</string>
    <string name="about_history">
        <![CDATA[
        <h1>Welcome!</h1>

        <p>Thanks for using BusTO, a "politically" <b>independent</b> app useful to move around Torino using a <b>Free/Libre software</b>.</p>

        <p>Why use this app?</p>
		<p>
        - You\'ll never be <b>tracked</b><br>
        - You\'ll never see boring <b>ads</b><br>
        - We\'ll always respect your <b>privacy</b><br>
        - Moreover, it\'s lightweight!<br>
        </p>

        <h2>How does it work?</h2>
        <p>This app will show you bus timetables gathering data from <b>www.gtt.to.it</b> or <b>www.5t.torino.it</b> "for personal use".</p>

		<p>Who worked on BusTO:<br>
		- <b>Fabio Mazza</b> current senior rockstar developer.<br>
        - <b>Andrea Ugo</b> current junior rockstar developer.<br>
		- <b>Silviu Chiriac</b> designer of the 2021 logo.<br>
		- <b>Marco M</b> rockstar tester and bug hunter.<br>
		- <b>Ludovico Pavesi</b> previous senior rockstar developer asd.<br>
		- <b>Valerio Bozzolan</b> maintainer and infrastructure sponsor.<br>
		- <b>Marco Gagino</b> contributor and icon creator.<br>
		- <b>JSoup</b> web scraper library.<br>
		- <b>makovkastar</b> floating buttons.<br>
		- <b>Google</b> Material Design icons.<br>
		- All the contributors!
		</p>
		
		<h2>Licenses</h2>
		<p>The app and the related source code are released by Valerio Bozzolan under the terms of the <i>GNU General Public License v3+</i>).
		So everyone is allowed to use, to study, to improve and to share this app by <b>any kind of means</b> and for <b>any purpose</b>: under the conditions of maintaining this rights and of attributing the original work to Valerio Bozzolan.</p>

		<h2>Notes</h2>
		<p>This app has been developed <b>hoping to be useful to everyone</b> but without ANY warranty.</p>
		<p>This translation is kindly provided by Riccardo Caniato and Marco Gagino.</p>
		<p>Get involved! :)</p>
    ]]>
    </string>
    <string name="cant_add_to_favorites">Cannot add to favorites (storage full or corrupted database?)!</string>
    <string name="action_view_on_map">View on a map</string>
    <string name="cannot_show_on_map_no_activity">Cannot find any application to show it in</string>
    <string name="cannot_show_on_map_no_position">Cannot find the position of the stop</string>
    <string name="list_fragment_debug" translatable="false">ListFragment - BusTO</string>
    <string name="mainSharedPreferences" translatable="false">it.reyboz.bustorino.preferences</string>
    <string name="databaseUpdatingPref" translatable="false">db_is_updating</string>
    <string name="nearby_stops_message">Nearby stops</string>
    <string name="nearby_arrivals_message">Nearby connections</string>
    <string name="app_version">App version</string>
    <string name="num_stops_nearby_not_number">The number of stops to show in the recents is invalid</string>
    <string name="invalid_number">Invalid value, put a valid number</string>
    <string name="position_searching_message">Finding the position&#8230;</string>
    <string name="no_stops_nearby">No stops nearby</string>
    <string name="pref_num_elements">Minimum number of stops</string>
    <string name="main_menu_pref">Preferences</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="general_settings">General</string>
    <string name="settings_experimental">Experimental features</string>
    <string name="settings_search_radius">Maximum distance (meters)</string>
    <string name="pref_recents_group_title">Recent stops</string>
    <string name="settings_group_general">General settings</string>
    <string name="settings_group_database">Database management</string>
    <string name="settings_reset_database">Launch manual database update</string>
    <string name="enable_position_message_map">Allow access to position to show it on the map</string>
    <string name="enableGpsText">Please enable GPS</string>
    <string name="database_update_msg_inapp">Database update in progress&#8230;</string>
    <string name="database_update_msg_notif">Updating the database</string>
    <string name="database_update_req">Force database update</string>
    <string name="database_update_req_descr">Touch to update the app database now</string>
    <string name="bus_arriving_at">is arriving at</string>
    <string name="arrivals_card_at_the_stop">at the stop</string>
    <string name="two_strings_format" translatable="false">%1$s - %2$s</string>
    <string name="show_arrivals">Show arrivals</string>
    <string name="show_stops">Show stops</string>
    <string name="open_telegram">Join Telegram channel</string>
    <string name="bt_center_map_description">Center on my location</string>
    <string name="bt_follow_me_description">Follow me</string>
    <string name="times_source_fmt">Arrivals source: %1$s</string>
    <string name="fivetapifetcher">GTT App</string>
    <string name="gttjsonfetcher">GTT Website</string>
    <string name="fivetscraper">5T Torino website</string>
    <string name="source_mato">Muoversi a Torino app</string>
    <string name="undetermined_source">Undetermined</string>
    <string name="arrival_source_changing">Changing arrival times source…</string>
    <string name="change_arrivals_source_message">Long press to change the source of arrivals</string>
    <string-array name="arrival_times_source_list">
        <item>@string/source_mato</item>
        <item>@string/fivetapifetcher</item>
        <item>@string/gttjsonfetcher</item>
        <item>@string/fivetscraper</item>
    </string-array>
    <string name="arrival_times_choice_title">Sources of arrival times</string>
    <string name="arrival_times_choice_explanation">Select which sources of arrival times to use</string>
    <string name="default_notification_channel" translatable="false">Default</string>
    <string name="default_notification_channel_description">Default channel for notifications</string>
    <string name="database_notification_channel">Database</string>
    <string name="database_notification_channel_desc">Notifications on the update of the database</string>
    <string name="too_many_permission_asks">Asked for %1$s permission too many times</string>
    <string name="permission_storage_maps_msg">Cannot use the map with the storage permission!</string>
    <string name="storage_permission">storage</string>
    <string name="message_crash">The application has crashed because you encountered a bug.
        \nIf you want, you can help the developers by sending the crash report via email.
        \nNote that no sensitive data is contained in the report, just small bits of info on your phone and app
        configuration/state.
    </string>
    <string name="acra_email_message">The application crashed and the crash report is in the attachments. Please
        describe what you were doing before the crash: \n
    </string>
    <string name="nav_arrivals_text">Arrivals</string>
    <string name="nav_map_text">Map</string>
    <string name="nav_favorites_text">Favorites</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="experiments">Experiments</string>
    <string name="donate_now">Buy us a coffee</string>
    <string name="map">Map</string>
    <string name="stop_search_view_title">Search by stop</string>
    <string name="requesting_db_update">Launching database update</string>
    <string name="pref_directions_capitalize">Capitalize directions</string>
    <string-array name="directions_capitalize">
        <item >Do not change arrivals directions</item>
        <item>Capitalize everything</item>
        <item>Capitalize only first letter</item>
    </string-array>
    <string name="pref_shown_startup">Section to show on startup</string>
    <string name="pref_shown_startup_def_desc">Touch to change it</string>
    <string name="pref_lines_click_msg">Show arrivals touching on stop</string>
</resources>