<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_arrivals"
            android:icon="@drawable/ic_baseline_departure_board_24"
            android:title="@string/nav_arrivals_text" />
        <item
            android:id="@+id/nav_map_item"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/nav_map_text" />
        <item
            android:id="@+id/nav_favorites_item"
            android:icon="@drawable/ic_star_filled_white"
            android:title="@string/nav_favorites_text" />
    </group>

    <item android:id="@+id/drawer_action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        />

</menu>