<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="clip_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="14dip"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.reyboz.bustorino.MainActivity" >
        
    <EditText
        android:id="@+id/busStopIDEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/searchButton"
        android:layout_toStartOf="@+id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:ems="10"
        android:hint="@string/insert_bus_stop_number"
        android:imeOptions="actionSearch"
        android:inputType="number"
        android:singleLine="true" >

        <requestFocus>
        </requestFocus>
    </EditText>
        
    <EditText
        android:id="@+id/busStopIDEditText_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/searchButton"
        android:layout_toStartOf="@+id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:ems="10"
        android:hint="@string/insert_bus_stop_name"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:visibility="gone" >
        
        <requestFocus>
        </requestFocus>
    </EditText>
    
    <ImageButton
        android:id="@+id/searchButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_marginRight="2dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/busStopIDEditText"
        android:background="@drawable/search_button_custom"
        android:contentDescription="@string/search"
        android:onClick="onSearchClick" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searchButton"
        android:indeterminateOnly="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/busStopNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searchButton"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="addInFavorites"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/howDoesItWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/busStopNameTextView"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="2dp"
        android:text="@string/howDoesItWork"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/blue_500"
        android:visibility="gone" />

    <TextView
        android:id="@+id/legend"
        android:layout_width="match_parent"
        android:layout_height="55dip"
        android:layout_below="@+id/howDoesItWork"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="2dp"
        android:gravity="center_vertical"
        android:text="@string/legend"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/blue_500"
        android:visibility="gone" />

    <Button
        android:id="@+id/hideHint"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dip"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/legend"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="2dp"
        android:layout_alignTop="@+id/legend"
        android:layout_below="@+id/progressBar"
        android:background="@drawable/bus_background"
        android:contentDescription="@string/search"
        android:onClick="onHideHint"
        android:text="@string/hint_button"
        android:textColor="@color/grey_100"
        android:textSize="21sp"
        android:visibility="gone" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
    	android:animateLayoutChanges="true"
        android:layout_below="@+id/legend"
        android:layout_marginRight="2dp"
        android:visibility="gone" >

        <ListView
            android:id="@+id/resultsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >
        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>
    
    <ToggleButton
        android:src="@drawable/floating_button"
        android:layout_height="56dip"
        android:layout_width="56dip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textOn="123"
        android:textOff="abc"
        android:textColor="@color/white"
        android:background="@drawable/keyboard_toggle"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="2dp"
        android:clickable="true"
        android:onClick="onChangeKeyboard" />
    
    <ImageView
        android:layout_width="58dip"
        android:layout_height="58dip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:background="@drawable/floating_button_shadow"/>

</RelativeLayout>